--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,6 +2,8 @@ name: Test
 
 on:
   pull_request:
+    # Added 'edited' temporarily, as there currently is no trigger for when the base branch is updated.
+    # https://github.com/orgs/community/discussions/64119
     types: [opened, synchronize, reopened, ready_for_review, closed]
     branches: main
   push:
