--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
     # Added 'edited' temporarily, as there currently is no trigger for when the base branch is updated.
     # https://github.com/orgs/community/discussions/64119
-    types: [opened, synchronize, reopened, ready_for_review, closed]
+    types: [opened, synchronize, reopened, ready_for_review, closed, edited]
     branches: main
   push:
     branches: main
