Added code for Age Keygen

--- a/tests/Devantler.AgeCLI.Tests.Unit/Devantler.AgeCLI.Tests.Unit.csproj
+++ b/tests/Devantler.AgeCLI.Tests.Unit/Devantler.AgeCLI.Tests.Unit.csproj
@@ -19,7 +19,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <ProjectReference Include="..\..\src\Devantler.AgeCLI\Devantler.AgeCLI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="assets\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Xunit" />
+  </ItemGroup>
 </Project>
