--- a/src/Devantler.AgeCLI/Devantler.AgeCLI.csproj
+++ b/src/Devantler.AgeCLI/Devantler.AgeCLI.csproj
@@ -7,7 +7,17 @@
     <AnalysisLevel>preview-recommended</AnalysisLevel>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <Version>0.0.1</Version>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Devantler.CLIRunner" Version="1.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="assets/binaries/*darwin-amd64" CopyToPublishDirectory="PreserveNewest" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="assets/binaries/*darwin-arm64" CopyToPublishDirectory="PreserveNewest" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="assets/binaries/*linux-amd64" CopyToPublishDirectory="PreserveNewest" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="assets/binaries/*linux-arm64" CopyToPublishDirectory="PreserveNewest" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 </Project>
