--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -11,7 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: ⚙️ Install bsdtar
-        run: sudo apt-get install -y bsdtar
+        run: |
+          sudo apt-get update
+          sudo apt-get install libarchive-tools
+          sudo apt-get install -y bsdtar
       - name: ⤵️ Get Age binary
         run: |
           ./.github/scripts/get-age-binary.sh
