--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,7 +1,8 @@
 name: Publish
 on:
   push:
-    branches: [main]
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 jobs:
@@ -13,7 +14,7 @@ jobs:
       - name: Set up .NET SDK
         uses: actions/setup-dotnet@v4.0.0
       - name: Pack
-        run: dotnet pack --configuration Release
+        run: dotnet pack --configuration Release /p:Version=${{ github.ref_name }}
       - name: Add GitHub Packages as NuGet Source
         run: dotnet nuget add source --username devantler --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/devantler/index.json"
       - name: Push to GitHub Packages
@@ -26,6 +27,6 @@ jobs:
       - name: Set up .NET SDK
         uses: actions/setup-dotnet@v4.0.0
       - name: Pack
-        run: dotnet pack --configuration Release
+        run: dotnet pack --configuration Release /p:Version=${{ github.ref_name }}
       - name: Push to NuGet
         run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
