--- a/Devantler.AgeCLI/Devantler.AgeCLI.csproj
+++ b/Devantler.AgeCLI/Devantler.AgeCLI.csproj
@@ -11,7 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Devantler.CLIRunner" Version="1.0.6" />
+    <PackageReference Include="Devantler.CLIRunner" Version="1.0.7" />
+    <PackageReference Include="Devantler.Keys.Age" Version="0.0.3" />
   </ItemGroup>
 
   <ItemGroup>
