--- a/Devantler.AgeCLI/Devantler.AgeCLI.csproj
+++ b/Devantler.AgeCLI/Devantler.AgeCLI.csproj
@@ -16,11 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="runtimes/osx-arm64/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/osx-arm64/native/" />
-    <Content Include="runtimes/osx-x64/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/osx-x64/native/" />
-    <Content Include="runtimes/linux-x64/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/linux-x64/native/" />
-    <Content Include="runtimes/linux-arm64/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/linux-arm64/native/" />
-    <Content Include="runtimes/win-x64/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/win-x64/native/" />
+    <Content Include="runtimes/*/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/" />
   </ItemGroup>
 
   <ItemGroup>
