--- a/Devantler.AgeCLI/Devantler.AgeCLI.csproj
+++ b/Devantler.AgeCLI/Devantler.AgeCLI.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="runtimes/*/native/*" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" Pack="true" PackagePath="runtimes/" />
+    <Content Include="runtimes/*/native/*" CopyToOutputDirectory="PreserveNewest" PackagePath="runtimes/" />
   </ItemGroup>
 
   <ItemGroup>
