--- a/Devantler.AgeCLI/Devantler.AgeCLI.csproj
+++ b/Devantler.AgeCLI/Devantler.AgeCLI.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="runtimes/*/native/*" CopyToOutputDirectory="PreserveNewest" PackagePath="runtimes/" />
+    <None Include="runtimes/*/native/*" CopyToOutputDirectory="PreserveNewest" Link="%(Filename)%(Extension)" PackagePath="runtimes/" />
   </ItemGroup>
 
   <ItemGroup>
