--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -29,6 +29,8 @@ jobs:
           echo "BINARY_VERSION=$BINARY_VERSION" >> $GITHUB_ENV
       - name: ✍🏻 Create PR
         uses: peter-evans/create-pull-request@v7
+        env:
+          BINARY_VERSION: ${{ env.BINARY_VERSION }}
         with:
           commit-message: "feat: Update  Age to ${{ env.BINARY_VERSION }}"
           title: "feat: Update Age binary to ${{ env.BINARY_VERSION }}"
