refactor: move to src/ and tests/
Signed-off-by: Nikolai Emil Damm <neq@energinet.dk>

--- a/tests/Devantler.AgeCLI.Tests/Devantler.AgeCLI.Tests.csproj
+++ b/tests/Devantler.AgeCLI.Tests/Devantler.AgeCLI.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Devantler.AgeCLI\Devantler.AgeCLI.csproj" />
+    <ProjectReference Include="..\..\src\Devantler.AgeCLI\Devantler.AgeCLI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
