--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -11,9 +11,16 @@ jobs:
   download-binary:
     runs-on: ubuntu-latest
     steps:
+      - name: Generate GitHub App Token
+        uses: tibdex/github-app-token@v2
+        id: generate-token
+        with:
+          app_id: ${{ vars.APP_ID }}
+          private_key: ${{ secrets.APP_PRIVATE_KEY }}
       - uses: actions/checkout@v4
         with:
           lfs: true
+          token: ${{ steps.generate-token.outputs.token }}
       - name: ⚙️ Install bsdtar
         run: |
           sudo apt-get update
@@ -21,12 +28,6 @@ jobs:
       - name: ⤵️ Get Age binary
         run: |
           ./.github/scripts/get-age-binary.sh
-      - name: Generate GitHub App Token
-        uses: tibdex/github-app-token@v2
-        id: generate-token
-        with:
-          app_id: ${{ vars.APP_ID }}
-          private_key: ${{ secrets.APP_PRIVATE_KEY }}
       - name: 🎯 Get version
         run: |
           BINARY_VERSION=$(./src/Devantler.AgeCLI/runtimes/linux-x64/native/age-keygen-linux-x64 --version)
