chore: add GitHub Actions workflow to embed binaries for Devantler.AgeCLI
Signed-off-by: Nikolai Emil Damm <nikolaiemildamm@icloud.com>

--- a/.github/workflows/embed-binaries.yaml
+++ b/.github/workflows/embed-binaries.yaml
@@ -15,3 +15,4 @@ jobs:
       BINARY_NAME: age-keygen
       DOTNET_PROJECT_NAME: Devantler.AgeCLI
       SCRIPT_PATH: scripts/get-age-binary.sh
+      VERSION_ARGS: --version
